--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "typescript": "^5.1.6",
     "webpack": "^5.88.2",
     "webpack-cli": "^5.1.4",
-    "webpack-dev-server": "^4.15.1"
+    "webpack-dev-server": "^4.15.1",
+    "tweedle.js": "^2.1.0"
   }
 }
