--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "clean": "rimraf dist"
   },
   "dependencies": {
-    "pixi.js": "^7.2.4"
+    "pixi.js": "^7.2.4",
+    "planck": "^1.0.0-beta.16"
   },
   "devDependencies": {
     "copy-webpack-plugin": "^11.0.0",
@@ -16,10 +17,10 @@
     "rimraf": "^5.0.1",
     "terser-webpack-plugin": "^5.3.9",
     "ts-loader": "^9.4.4",
+    "tweedle.js": "^2.1.0",
     "typescript": "^5.1.6",
     "webpack": "^5.88.2",
     "webpack-cli": "^5.1.4",
-    "webpack-dev-server": "^4.15.1",
-    "tweedle.js": "^2.1.0"
+    "webpack-dev-server": "^4.15.1"
   }
 }
